--- a/WebAppCore/Pages/Index.cshtml
+++ b/WebAppCore/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Product List";
+    Layout = "_Layout";
 }
 <style>
     /* Grid layout for the products */
