--- a/WebAppCore/Pages/Managament/Products/Details.cshtml
+++ b/WebAppCore/Pages/Managament/Products/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "{id:int}"
 @model WebAppCore.Pages.Managament.Products.DetailsModel
 @{
+    Layout = "_ManagamentLayout";
 }
 
 <div class="product-details">
