--- a/WebAppCore/Pages/Managament/Products/Index.cshtml
+++ b/WebAppCore/Pages/Managament/Products/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model WebAppCore.Pages.Managament.Products.IndexModel
 @{
+    Layout = "_ManagamentLayout";
 }
 
 <h1>Product Management</h1>
