--- a/WebAppCore/Pages/Shared/_Layout.cshtml
+++ b/WebAppCore/Pages/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - WebAppCore - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - WebAppCore - <a href="/Managament/Products">Privacy</a>
         </div>
     </footer>
 
